--- a/course-1/module-3/research-seminar/pom.xml
+++ b/course-1/module-3/research-seminar/pom.xml
@@ -17,12 +17,6 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
-            <version>2.1.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
             <version>2.1.1</version>
         </dependency>
@@ -38,6 +32,12 @@
             <artifactId>scalatest_2.11</artifactId>
             <version>2.2.6</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.5</version>
         </dependency>
 
     </dependencies>
